--- a/CytEx.ipynb
+++ b/CytEx.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPqGFtDX9r0CcOjGUUgclhB",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNHIpz+AMO44qzofctfNaLA"
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/i-salehi/CytEx/blob/main/CytEx.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -117,7 +106,7 @@
         "    output_sheet.append(hit_cells)\n",
         "output_workbook.save('/content/Hits.xlsx')\n",
         "\n",
-        "#HI\n"
+        "#HI#################"
       ]
     }
   ]
