--- a/CytEx.ipynb
+++ b/CytEx.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpuTLYcFCIM70gehbBEJuD",
+      "authorship_tag": "ABX9TyMkHWP+/N1+BSndqeMek98L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 277
+          "height": 141
         },
         "id": "0axBjp1eJBS2",
-        "outputId": "6c8d0daa-c4b8-4c36-94a8-da562abc3f07"
+        "outputId": "2069e0c0-b280-4e13-c348-3e94c57f53c2"
       },
       "outputs": [
         {
@@ -58,9 +58,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-c8e924f9-46b8-4ed3-96ba-1965a9c60e4b\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-87078faa-6a96-4ef4-9cb2-e30ba71c5bfd\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-c8e924f9-46b8-4ed3-96ba-1965a9c60e4b\">\n",
+              "     <output id=\"result-87078faa-6a96-4ef4-9cb2-e30ba71c5bfd\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -243,18 +243,6 @@
             ]
           },
           "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Saving RawA.xlsx to RawA (1).xlsx\n",
-            "\n",
-            "The file RawA.xlsx was successfully saved.\n",
-            "\n",
-            "Number of plates:31\n",
-            "\u001b[32mExtracted data saved as Hits.xlsx\u001b[32m\n"
-          ]
         }
       ],
       "source": [
@@ -340,7 +328,9 @@
         "for hit_cells in hit_data:\n",
         "    output_sheet.append(hit_cells)\n",
         "output_workbook.save('/content/Hits.xlsx')\n",
-        "#W\n"
+        "\n",
+        "\n",
+        "###wwwwwww\n"
       ]
     }
   ]
