--- a/CytEx.ipynb
+++ b/CytEx.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkHWP+/N1+BSndqeMek98L",
+      "authorship_tag": "ABX9TyNKt2ymgyNoqC39QQa9p+bG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +28,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 141
+          "height": 260
         },
         "id": "0axBjp1eJBS2",
-        "outputId": "2069e0c0-b280-4e13-c348-3e94c57f53c2"
+        "outputId": "b3870dee-332a-4838-8c45-9e39be3a39f8"
       },
       "outputs": [
         {
@@ -58,9 +58,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-87078faa-6a96-4ef4-9cb2-e30ba71c5bfd\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-9d7ab7cf-47a4-4980-90af-5b0a19a8a322\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-87078faa-6a96-4ef4-9cb2-e30ba71c5bfd\">\n",
+              "     <output id=\"result-9d7ab7cf-47a4-4980-90af-5b0a19a8a322\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -243,9 +243,22 @@
             ]
           },
           "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving Book7.xlsx to Book7 (9).xlsx\n",
+            "\n",
+            "The file Book7.xlsx was successfully saved.\n",
+            "\n",
+            "Number of plates: 3\n",
+            "\u001b[32mExtracted data saved as Plates.xlsx\u001b[32m\n"
+          ]
         }
       ],
       "source": [
+        "#@title Upload\n",
         "import io\n",
         "import os\n",
         "from google.colab import files\n",
@@ -273,20 +286,16 @@
         "    print(f\"\")\n",
         "    print(f\"The file {filename} was successfully saved.\")\n",
         "\n",
-        "\n",
         "import openpyxl\n",
         "\n",
         "worksheet = workbook.active\n",
         "\n",
-        "# Set up variables to keep track of hits and misses\n",
-        "hits = 0\n",
+        "# Set up variables to keep track of plates and misses\n",
+        "plates = 0\n",
         "misses = 0\n",
         "\n",
-        "# Define the fill color for hits\n",
-        "greenFill = openpyxl.styles.PatternFill(start_color='00FF00', end_color='00FF00', fill_type='solid')\n",
-        "\n",
-        "# Define a list to store the data for each hit\n",
-        "hit_data = []\n",
+        "# Define a list to store the data for each plate, starting with column headers\n",
+        "plate_data = [[\"\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\", \"11\", \"12\"]]\n",
         "\n",
         "# Loop through each cell in the worksheet\n",
         "for row in worksheet.iter_rows():\n",
@@ -295,42 +304,35 @@
         "        if cell.value == 1 and cell.offset(row=0, column=-1).value is None:\n",
         "            # Check if the cell below the empty cell contains an A\n",
         "            if cell.offset(row=1, column=-1).value == 'A':\n",
-        "                hits += 1\n",
-        "                # Get the coordinates of the three cells involved in the hit selection\n",
+        "                plates += 1\n",
+        "                # Get the coordinates of the three cells involved in the plate selection\n",
         "                top_left = (cell.column, cell.row)\n",
         "                bottom_left = (cell.offset(row=1, column=-1).column, cell.offset(row=1, column=-1).row)\n",
         "                top_right = (cell.offset(row=0, column=-1).column, cell.offset(row=0, column=-1).row)\n",
         "                # Define the coordinates of the bottom right corner of the rectangle\n",
         "                bottom_right = (top_right[0] + 12, bottom_left[1] + 8)\n",
         "                # Store the cell values in a list\n",
-        "                for r in range(cell.row, cell.row+9):\n",
+        "                for r in range(cell.row + 1, cell.row + 9):  # Exclude the first row\n",
         "                    row_data = []\n",
-        "                    for c in range(cell.column-1, cell.column+12):\n",
+        "                    for c in range(cell.column - 1, cell.column + 12):\n",
         "                        row_data.append(worksheet.cell(row=r, column=c).value)\n",
-        "                        worksheet.cell(row=r, column=c).fill = greenFill\n",
-        "                    hit_data.append(row_data)\n",
+        "                    plate_data.append(row_data)\n",
         "            else:\n",
-        "                # Color the empty cell and cells below green\n",
-        "                for r in range(cell.row, cell.row+9):\n",
-        "                    worksheet.cell(row=r, column=cell.column-1).fill = greenFill\n",
         "                misses += 1\n",
         "        else:\n",
         "            misses += 1\n",
         "\n",
-        "# Output the number of hits and misses\n",
+        "# Output the number of plates and misses\n",
         "print(f\"\")\n",
-        "print(f\"Number of plates:{hits}\")\n",
-        "print(f\"\\033[32mExtracted data saved as Hits.xlsx\\033[32m\")\n",
+        "print(f\"Number of plates: {plates}\")\n",
+        "print(f\"\\033[32mExtracted data saved as Plates.xlsx\\033[32m\")\n",
         "\n",
-        "# Write the hit data to the same sheet in the output file\n",
+        "# Write the plate data to the same sheet in the output file\n",
         "output_workbook = openpyxl.Workbook()\n",
         "output_sheet = output_workbook.active\n",
-        "for hit_cells in hit_data:\n",
-        "    output_sheet.append(hit_cells)\n",
-        "output_workbook.save('/content/Hits.xlsx')\n",
-        "\n",
-        "\n",
-        "###wwwwwww\n"
+        "for plate_cells in plate_data:\n",
+        "    output_sheet.append(plate_cells)\n",
+        "output_workbook.save('/content/Plates.xlsx')\n"
       ]
     }
   ]
