--- a/CytEx.ipynb
+++ b/CytEx.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNX9leU34/o4Yz2UmGXqLM6",
+      "authorship_tag": "ABX9TyNqUOuf8vI4mDuBvBZDRKlZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0axBjp1eJBS2"
+        "id": "0axBjp1eJBS2",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -70,7 +71,8 @@
         "misses = 0\n",
         "\n",
         "# Define a list to store the data for each plate, starting with column headers\n",
-        "plate_data = [[\"Row\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\", \"11\", \"12\", \"Plate\"]]\n",
+        "plate_data_replicate_one = [[\"Row\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\", \"11\", \"12\", \"Plate\"]]\n",
+        "plate_data_replicate_two = [[\"Row\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\", \"10\", \"11\", \"12\", \"Plate\"]]\n",
         "\n",
         "# Loop through each cell in the worksheet\n",
         "for i, row in enumerate(worksheet.iter_rows()):\n",
@@ -89,8 +91,12 @@
         "                # Store the cell values in a list with the plate number\n",
         "                for r in range(cell.row + 1, cell.row + 9):  # Exclude the first row\n",
         "                    row_data = [worksheet.cell(row=r, column=c).value for c in range(cell.column - 1, cell.column + 12)]\n",
-        "                    row_data.append(plates)\n",
-        "                    plate_data.append(row_data)\n",
+        "                    if plates <= 10:\n",
+        "                        row_data.append(plates)\n",
+        "                        plate_data_replicate_one.append(row_data)\n",
+        "                    else:\n",
+        "                        row_data.append(plates-10)\n",
+        "                        plate_data_replicate_two.append(row_data)\n",
         "            else:\n",
         "                misses += 1\n",
         "        else:\n",
@@ -99,64 +105,304 @@
         "# Output the number of plates and misses\n",
         "print(f\"\")\n",
         "print(f\"Number of plates: {plates}\")\n",
-        "print(f\"\\033[32mExtracted data saved as Plates.csv\\033[32m\")\n",
+        "print(f\"\\033[32mExtracted data saved as Replicate_One.csv, and Replicate_Two.csv\\033[32m\")\n",
         "\n",
-        "# Write the plate data to a CSV file\n",
-        "with open('/content/Plates.csv', mode='w') as output_file:\n",
+        "# Write the plate data to a CSV file for replicate one\n",
+        "with open('/content/Replicate_One.csv', mode='w') as output_file:\n",
         "    output_writer = csv.writer(output_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
-        "    for plate_cells in plate_data:\n",
+        "    for plate_cells in plate_data_replicate_one:\n",
         "        output_writer.writerow(plate_cells)\n",
         "\n",
-        "\n"
+        "# Write the plate data to a CSV file for replicate two\n",
+        "with open('/content/Replicate_Two.csv', mode='w') as output_file:\n",
+        "    output_writer = csv.writer(output_file, delimiter=',', quotechar='\"', quoting=csv.QUOTE_MINIMAL)\n",
+        "    for plate_cells in plate_data_replicate_two:\n",
+        "        output_writer.writerow(plate_cells)\n",
+        "\n",
+        "  "
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Plate Caller"
-      ],
-      "metadata": {
-        "id": "08lALByQRfMB"
-      }
     },
     {
       "cell_type": "code",
       "source": [
-        "import csv\n",
+        "#@title MIC Caller - Replicate One\n",
         "\n",
-        "# Extract unique plate numbers and their corresponding rows\n",
-        "with open('/content/Plates.csv', mode='r') as input_file:\n",
-        "    input_reader = csv.DictReader(input_file)\n",
-        "    plates = {}\n",
-        "    for row in input_reader:\n",
-        "        plate_number = row['Plate']\n",
-        "        if plate_number not in plates:\n",
-        "            plates[plate_number] = [row]\n",
-        "        else:\n",
-        "            plates[plate_number].append(row)\n",
+        "import pandas as pd\n",
         "\n",
-        "# Write the plate data to a separate file for each plate number\n",
-        "for plate_number, rows in plates.items():\n",
-        "    filename = f'/content/Plate{plate_number}.csv'\n",
-        "    with open(filename, mode='w') as output_file:\n",
-        "        output_writer = csv.DictWriter(output_file, fieldnames=rows[0].keys())\n",
-        "        output_writer.writeheader()\n",
-        "        output_writer.writerows(rows)\n"
+        "# Read in the CSV file\n",
+        "df = pd.read_csv(\"/content/Replicate_One.csv\", header=0, sep=\",\")\n",
+        "\n",
+        "# Drop the \"Plate\" column\n",
+        "df = df.drop(columns=[\"Plate\"])\n",
+        "\n",
+        "# Rename columns\n",
+        "df.columns = [\"Row\"] + [str(i) for i in range(1,13)]\n",
+        "\n",
+        "# Reset the index\n",
+        "df = df.reset_index(drop=True)\n",
+        "\n",
+        "# Create a factor variable for the plate number\n",
+        "df[\"plate\"] = pd.cut(df.index, bins=10, labels=False)\n",
+        "\n",
+        "# Split the data into 10 plates\n",
+        "plates = [group[1] for group in df.groupby(\"plate\")]\n",
+        "\n",
+        "# Rename the row names for each plate\n",
+        "for i in range(10):\n",
+        "    plates[i].index = [\"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \"G\", \"H\"]\n",
+        "\n",
+        "# Define a dictionary to map plate numbers to values\n",
+        "plate_map = {\n",
+        "    \"Plate 10\": 0.25,\n",
+        "    \"Plate 9\": 0.5,\n",
+        "    \"Plate 8\": 1,\n",
+        "    \"Plate 7\": 2,\n",
+        "    \"Plate 6\": 4,\n",
+        "    \"Plate 5\": 8,\n",
+        "    \"Plate 4\": 16,\n",
+        "    \"Plate 3\": 32,\n",
+        "    \"Plate 2\": 64,\n",
+        "    \"Plate 1\": 128,\n",
+        "}\n",
+        "\n",
+        "# Create a dictionary to store the well values\n",
+        "well_data = {}\n",
+        "for col in range(1, 13):\n",
+        "    for row in \"ABCDEFGH\":\n",
+        "        well_name = row + str(col)\n",
+        "        for i in range(10):\n",
+        "            plate_name = \"Plate \" + str(i+1)\n",
+        "            value = plates[i].at[row, str(col)]\n",
+        "            if well_name not in well_data:\n",
+        "                well_data[well_name] = {}\n",
+        "            # Update plate name to match the plate names in plate_map dictionary\n",
+        "            plate_name_map = plate_map.get(plate_name, None)\n",
+        "            if plate_name_map is not None:\n",
+        "                well_data[well_name][plate_name_map] = value\n",
+        "\n",
+        "# Create a DataFrame from the well data dictionary\n",
+        "well_df = pd.DataFrame.from_dict(well_data, orient=\"index\")\n",
+        "\n",
+        "# Rename the columns using the plate_map dictionary\n",
+        "well_df = well_df.rename(columns=plate_map)\n",
+        "\n",
+        "# Define a function to determine MIC for each row\n",
+        "def get_mic(row):\n",
+        "    if row.name in ['H1', 'H2', 'H3', 'H4', 'H5', 'H6']:\n",
+        "        return \"Sterility Control\"\n",
+        "    elif row.name in ['H7', 'H8', 'H9', 'H10', 'H11', 'H12']:\n",
+        "        return \"Growth Control\"\n",
+        "    else:\n",
+        "        for plate_name in plate_map.values():\n",
+        "            col_name = plate_name\n",
+        "            value = row[col_name]\n",
+        "            if pd.notna(value) and value < 0.499:\n",
+        "                return plate_name\n",
+        "    return \">128\"\n",
+        "\n",
+        "# Define the desired row order using nested list comprehension\n",
+        "row_order = [f\"{row}{col}\" for row in \"ABCDEFGH\" for col in range(1, 13)]\n",
+        "\n",
+        "# Select the rows in the desired order\n",
+        "well_df = well_df.loc[row_order]\n",
+        "\n",
+        "# Apply the function to each row of the dataframe\n",
+        "well_df[\"MIC\"] = well_df.apply(get_mic, axis=1)\n",
+        "\n",
+        "# Save the data as an Excel file\n",
+        "well_df.to_excel(\"Replicate_One_MIC.xlsx\")\n"
       ],
       "metadata": {
-        "id": "4HAQWZ_SPl_U"
+        "cellView": "form",
+        "id": "s9Hs-61buZvP"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "Devide data to two technical replicate groups"
+        "#@title MIC Caller - Replicate Two\n",
+        "\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Read in the CSV file\n",
+        "df = pd.read_csv(\"/content/Replicate_Two.csv\", header=0, sep=\",\")\n",
+        "\n",
+        "# Drop the \"Plate\" column\n",
+        "df = df.drop(columns=[\"Plate\"])\n",
+        "\n",
+        "# Rename columns\n",
+        "df.columns = [\"Row\"] + [str(i) for i in range(1,13)]\n",
+        "\n",
+        "# Reset the index\n",
+        "df = df.reset_index(drop=True)\n",
+        "\n",
+        "# Create a factor variable for the plate number\n",
+        "df[\"plate\"] = pd.cut(df.index, bins=10, labels=False)\n",
+        "\n",
+        "# Split the data into 10 plates\n",
+        "plates = [group[1] for group in df.groupby(\"plate\")]\n",
+        "\n",
+        "# Rename the row names for each plate\n",
+        "for i in range(10):\n",
+        "    plates[i].index = [\"A\", \"B\", \"C\", \"D\", \"E\", \"F\", \"G\", \"H\"]\n",
+        "\n",
+        "# Define a dictionary to map plate numbers to values\n",
+        "plate_map = {\n",
+        "    \"Plate 10\": 0.25,\n",
+        "    \"Plate 9\": 0.5,\n",
+        "    \"Plate 8\": 1,\n",
+        "    \"Plate 7\": 2,\n",
+        "    \"Plate 6\": 4,\n",
+        "    \"Plate 5\": 8,\n",
+        "    \"Plate 4\": 16,\n",
+        "    \"Plate 3\": 32,\n",
+        "    \"Plate 2\": 64,\n",
+        "    \"Plate 1\": 128,\n",
+        "}\n",
+        "\n",
+        "# Create a dictionary to store the well values\n",
+        "well_data = {}\n",
+        "for col in range(1, 13):\n",
+        "    for row in \"ABCDEFGH\":\n",
+        "        well_name = row + str(col)\n",
+        "        for i in range(10):\n",
+        "            plate_name = \"Plate \" + str(i+1)\n",
+        "            value = plates[i].at[row, str(col)]\n",
+        "            if well_name not in well_data:\n",
+        "                well_data[well_name] = {}\n",
+        "            # Update plate name to match the plate names in plate_map dictionary\n",
+        "            plate_name_map = plate_map.get(plate_name, None)\n",
+        "            if plate_name_map is not None:\n",
+        "                well_data[well_name][plate_name_map] = value\n",
+        "\n",
+        "# Create a DataFrame from the well data dictionary\n",
+        "well_df = pd.DataFrame.from_dict(well_data, orient=\"index\")\n",
+        "\n",
+        "# Rename the columns using the plate_map dictionary\n",
+        "well_df = well_df.rename(columns=plate_map)\n",
+        "\n",
+        "# Define a function to determine MIC for each row\n",
+        "def get_mic(row):\n",
+        "    if row.name in ['H1', 'H2', 'H3', 'H4', 'H5', 'H6']:\n",
+        "        return \"Sterility Control\"\n",
+        "    elif row.name in ['H7', 'H8', 'H9', 'H10', 'H11', 'H12']:\n",
+        "        return \"Growth Control\"\n",
+        "    else:\n",
+        "        for plate_name in plate_map.values():\n",
+        "            col_name = plate_name\n",
+        "            value = row[col_name]\n",
+        "            if pd.notna(value) and value < 0.499:\n",
+        "                return plate_name\n",
+        "    return \">128\"\n",
+        "\n",
+        "# Define the desired row order using nested list comprehension\n",
+        "row_order = [f\"{row}{col}\" for row in \"ABCDEFGH\" for col in range(1, 13)]\n",
+        "\n",
+        "# Select the rows in the desired order\n",
+        "well_df = well_df.loc[row_order]\n",
+        "\n",
+        "# Apply the function to each row of the dataframe\n",
+        "well_df[\"MIC\"] = well_df.apply(get_mic, axis=1)\n",
+        "\n",
+        "# Save the data as an Excel file\n",
+        "well_df.to_excel(\"Replicate_Two_MIC.xlsx\")\n"
       ],
       "metadata": {
-        "id": "wWF0WjK2sWWA"
-      }
+        "cellView": "form",
+        "id": "AseJ4RHR2T63"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title MIC Caller - Combined\n",
+        "import pandas as pd\n",
+        "import openpyxl\n",
+        "from openpyxl.styles import Color, Fill, PatternFill, GradientFill, Alignment\n",
+        "from openpyxl.formatting.rule import ColorScaleRule\n",
+        "\n",
+        "# Load the replicate one data\n",
+        "replicate_one = pd.read_excel(\"/content/Replicate_One_MIC.xlsx\")\n",
+        "replicate_two = pd.read_excel(\"/content/Replicate_Two_MIC.xlsx\")\n",
+        "\n",
+        "# Replace None values in headers with empty string\n",
+        "replicate_one_headers = [\"\" if header is None else header for header in list(replicate_one.columns)]\n",
+        "replicate_two_headers = [\"\" if header is None else header for header in list(replicate_two.columns)]\n",
+        "replicate_two_headers = [''] + replicate_two_headers\n",
+        "\n",
+        "# Create a new workbook\n",
+        "workbook = openpyxl.Workbook()\n",
+        "\n",
+        "# Get the active worksheet\n",
+        "worksheet = workbook.active\n",
+        "\n",
+        "# Define the starting row and column for each replicate\n",
+        "replicate_one_row = 2\n",
+        "replicate_one_col = 1\n",
+        "replicate_two_row = 2\n",
+        "replicate_two_col = 14\n",
+        "\n",
+        "# Add the column headers to the worksheet\n",
+        "worksheet.append(replicate_one_headers + replicate_two_headers)\n",
+        "\n",
+        "# Add the replicate one data to the worksheet\n",
+        "for r in range(replicate_one.shape[0]):\n",
+        "    for c in range(replicate_one.shape[1]):\n",
+        "        cell = worksheet.cell(row=replicate_one_row+r, column=replicate_one_col+c, value=replicate_one.iloc[r,c])\n",
+        "        cell.alignment = Alignment(horizontal='center', vertical='center')\n",
+        "\n",
+        "# Add the replicate two data to the worksheet\n",
+        "for r in range(replicate_two.shape[0]):\n",
+        "    for c in range(replicate_two.shape[1]):\n",
+        "        cell = worksheet.cell(row=replicate_two_row+r, column=replicate_two_col+c, value=replicate_two.iloc[r,c])\n",
+        "        cell.alignment = Alignment(horizontal='center', vertical='center')\n",
+        "\n",
+        "# Rename column named \"Unnamed: 0\"\n",
+        "for cell in worksheet[1]:\n",
+        "    if cell.value == \"Unnamed: 0\":\n",
+        "        cell.value = \"\"\n",
+        "\n",
+        "# Center column headers\n",
+        "for row in worksheet[1:2]:\n",
+        "    for cell in row:\n",
+        "        cell.alignment = Alignment(horizontal='center', vertical='center')\n",
+        "\n",
+        "# Set width of columns L and Y\n",
+        "worksheet.column_dimensions['L'].width = 16\n",
+        "worksheet.column_dimensions['Y'].width = 16\n",
+        "\n",
+        "# Add color scales to rectangles\n",
+        "first_rectangle_range = \"B2:K97\"\n",
+        "second_rectangle_range = \"O2:X97\"\n",
+        "\n",
+        "# Create color scale rules for the two rectangles\n",
+        "red_scale_rule = ColorScaleRule(start_type=\"min\", start_color=\"FFFFFF\", end_type=\"max\", end_color=\"FF5733\")\n",
+        "blue_scale_rule = ColorScaleRule(start_type=\"min\", start_color=\"FFFFFF\", end_type=\"max\", end_color=\"3399FF\")\n",
+        "\n",
+        "# Apply color scale rules to the two rectangles\n",
+        "for row in worksheet[first_rectangle_range]:\n",
+        "    for cell in row:\n",
+        "        cell.fill = GradientFill(stop=[Color(\"FFFFFF\"), Color(\"FF5733\")])\n",
+        "worksheet.conditional_formatting.add(first_rectangle_range, red_scale_rule)\n",
+        "\n",
+        "for row in worksheet[second_rectangle_range]:\n",
+        "    for cell in row:\n",
+        "        cell.fill = GradientFill(stop=[Color(\"FFFFFF\"), Color(\"3399FF\")])\n",
+        "worksheet.conditional_formatting.add(second_rectangle_range, blue_scale_rule)\n",
+        "\n",
+        "# Save the workbook\n",
+        "workbook.save(\"combinedMIC.xlsx\")\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "obffUPBy46YC"
+      },
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
